Handle new Scryfall bulk data API
Signed-off-by: Emi <dealuminis@gmail.com>